@@ -1,3 +1,10 @@
+Mon May  6 03:48:17 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_store.c (FAVOUR): Parenthesize macro arguments.
+	  (dbstore): In situation (3), use the old lookup key for the name
+	  of the corresponding multi key, not the basename (which may be in
+	  the wrong case).
+
 Sun May  5 17:49:21 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* src/lexgrog.l: Accept DOS line-ending conventions.
